<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txttitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtbienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/bienvenida"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnrojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/rojo"
            android:textColor="#F44336"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnazul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/azul"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnamarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/amarillo"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnverde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/verde"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btncafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/cafe"
            android:textColor="#DF8807"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnnegro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnmorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:text="@string/morado"
            android:textColor="#9C27B0"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>